# Learning_Streamlit

./: .gitignore  README.md  Workspace.code-workspace  app.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.vscode.ext/charliermarsh.ruff-2025.24.0-darwin-x64/: .vsixmanifest  package.json
.vscode.ext/github.copilot-1.364.0/: .vsixmanifest  package.json
.vscode.ext/gruntfuggly.todo-tree-0.0.226/: package.json
.vscode.ext/ms-azuretools.vscode-containers-2.1.0/: package.json
.vscode.ext/ms-python.debugpy-2025.10.0-darwin-x64/: package.json
.vscode.ext/ms-python.python-2025.12.0-darwin-x64/: .vsixmanifest  package.json
.vscode.ext/ms-python.vscode-pylance-2025.7.1/: package.json
.vscode.ext/ms-python.vscode-python-envs-1.4.0-darwin-x64/: .vsixmanifest  package.json
.vscode.ext/ms-python.vscode-python-envs-1.4.0-darwin-x64/l10n/: bundle.l10n.cs.json  bundle.l10n.de.json  bundle.l10n.es.json  (+11 more)
.vscode.ext/ms-vscode-remote.remote-containers-0.422.1/: package.json
.vscode.ext/ms-vscode.live-server-0.4.15/: package.json
.vscode.ext/onatm.open-in-new-window-1.1.0/: .vsixmanifest  package.json
.vscode.ext/peterschmalfeldt.explorer-exclude-1.3.2/: package.json
src/charts/: audio-purr.py
src/chat/: chat.llm.py  chat.message.py
src/data/: column_config.py  data_editor2.py  data_editor3.py
src/intro/: intro.py
src/layout/: columns_bottom_widgets.py
src/media/: logo.py
src/navigation/: navigation.py
src/theming/: charts.altair_chart.py  charts.altair_custom_colors.py  charts.plotly_chart_theme.py  charts.vega_lite_theme.py
(+15 files in other folders)
